--- a/LincKia/Base.lproj/Main.storyboard
+++ b/LincKia/Base.lproj/Main.storyboard
@@ -419,7 +419,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Sq8-wg-V2s">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="ayo-e5-gV2" id="m3h-6B-C1k"/>
@@ -429,10 +429,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Sq8-wg-V2s" secondAttribute="trailing" id="BWk-sa-DdV"/>
-                            <constraint firstItem="LaM-ed-0F0" firstAttribute="top" secondItem="Sq8-wg-V2s" secondAttribute="bottom" constant="64" id="aum-Hn-H3Z"/>
-                            <constraint firstItem="Sq8-wg-V2s" firstAttribute="top" secondItem="70m-hP-GSa" secondAttribute="bottom" constant="-64" id="hel-IY-nEM"/>
-                            <constraint firstItem="Sq8-wg-V2s" firstAttribute="leading" secondItem="uQ3-j2-LLP" secondAttribute="leading" id="oRh-3t-rNK"/>
+                            <constraint firstItem="Sq8-wg-V2s" firstAttribute="leading" secondItem="uQ3-j2-LLP" secondAttribute="leading" id="D4H-wg-3Sr"/>
+                            <constraint firstItem="LaM-ed-0F0" firstAttribute="top" secondItem="Sq8-wg-V2s" secondAttribute="bottom" id="WLr-8g-Npj"/>
+                            <constraint firstItem="Sq8-wg-V2s" firstAttribute="top" secondItem="70m-hP-GSa" secondAttribute="bottom" constant="-64" id="j4Y-F4-vm8"/>
+                            <constraint firstAttribute="trailing" secondItem="Sq8-wg-V2s" secondAttribute="trailing" id="pPG-Zh-6yA"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="我的" id="3Hh-zb-VDl"/>
