--- a/LincKia/ActivitySpace/JCYActivitySpaceInfoCellTableViewCell.xib
+++ b/LincKia/ActivitySpace/JCYActivitySpaceInfoCellTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -146,7 +146,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="arrow.png" width="22" height="22"/>
+        <image name="arrow.png" width="15" height="40"/>
         <image name="line.png" width="319" height="13"/>
         <image name="map@3x.png" width="86" height="86"/>
     </resources>
