--- a/LincKia/Base.lproj/Main.storyboard
+++ b/LincKia/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -1032,6 +1032,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="1VG-5d-lKU"/>
                     <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="password" destination="SZ2-nU-NFy" id="Wfh-Qc-3zQ"/>
                         <outlet property="phone" destination="8wa-9H-GHi" id="MNO-5o-Wen"/>
@@ -1323,6 +1324,44 @@
             </objects>
             <point key="canvasLocation" x="1823" y="-178"/>
         </scene>
+        <!--滴滴出行-->
+        <scene sceneID="pLX-Rz-RNE">
+            <objects>
+                <viewController id="w0L-59-WsV" userLabel="滴滴出行" customClass="PBDiDiViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="aBH-s4-nZW"/>
+                        <viewControllerLayoutGuide type="bottom" id="qaa-mW-zbc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ye0-2I-7VE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C3q-YQ-heu">
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="qaa-mW-zbc" firstAttribute="top" secondItem="C3q-YQ-heu" secondAttribute="bottom" id="C8t-2L-6gH"/>
+                            <constraint firstAttribute="trailing" secondItem="C3q-YQ-heu" secondAttribute="trailing" id="VYh-BL-OQ6"/>
+                            <constraint firstItem="C3q-YQ-heu" firstAttribute="top" secondItem="aBH-s4-nZW" secondAttribute="bottom" id="c4q-jj-LA2"/>
+                            <constraint firstItem="C3q-YQ-heu" firstAttribute="leading" secondItem="Ye0-2I-7VE" secondAttribute="leading" id="isn-hh-3Sw"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="滴滴出行" id="7Wr-Qn-KGX">
+                        <barButtonItem key="leftBarButtonItem" image="title_back_unpressed.png" id="3sA-SL-HWs">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="back:" destination="w0L-59-WsV" id="spw-uD-hbv"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RH3-4B-xLU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2240" y="-42"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
@@ -1446,6 +1485,7 @@
                         <segue destination="3PK-Ra-LPo" kind="push" identifier="MemberToLogin" id="gUA-3g-ppz"/>
                         <segue destination="xfP-fB-kum" kind="push" identifier="MemberToSendExpress" id="dcF-7F-b40"/>
                         <segue destination="pHQ-fU-FWS" kind="push" identifier="MemberToEnvironment" id="i2O-e8-GGQ"/>
+                        <segue destination="w0L-59-WsV" kind="push" identifier="MemberToDiDi" id="yiF-nm-spy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F8d-1m-6XU" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1650,6 +1690,6 @@
         <image name="users_textfield_unclicked.png" width="292" height="52"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="huh-qE-qeJ"/>
+        <segue reference="gUA-3g-ppz"/>
     </inferredMetricsTieBreakers>
 </document>
