新增滴滴打车页面（已完成）

--- a/LincKia/Base.lproj/Main.storyboard
+++ b/LincKia/Base.lproj/Main.storyboard
@@ -1336,17 +1336,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C3q-YQ-heu">
-                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            <webView contentMode="scaleToFill" scalesPageToFit="YES" suppressesIncrementalRendering="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hah-oS-CZm">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="618"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="w0L-59-WsV" id="olQ-YA-f0o"/>
+                                </connections>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="qaa-mW-zbc" firstAttribute="top" secondItem="C3q-YQ-heu" secondAttribute="bottom" id="C8t-2L-6gH"/>
-                            <constraint firstAttribute="trailing" secondItem="C3q-YQ-heu" secondAttribute="trailing" id="VYh-BL-OQ6"/>
-                            <constraint firstItem="C3q-YQ-heu" firstAttribute="top" secondItem="aBH-s4-nZW" secondAttribute="bottom" id="c4q-jj-LA2"/>
-                            <constraint firstItem="C3q-YQ-heu" firstAttribute="leading" secondItem="Ye0-2I-7VE" secondAttribute="leading" id="isn-hh-3Sw"/>
+                            <constraint firstItem="hah-oS-CZm" firstAttribute="leading" secondItem="Ye0-2I-7VE" secondAttribute="leading" id="5n1-pE-bsD"/>
+                            <constraint firstAttribute="trailing" secondItem="hah-oS-CZm" secondAttribute="trailing" id="NGw-po-es0"/>
+                            <constraint firstItem="qaa-mW-zbc" firstAttribute="top" secondItem="hah-oS-CZm" secondAttribute="bottom" constant="-50" id="fWr-Ab-YY1"/>
+                            <constraint firstItem="hah-oS-CZm" firstAttribute="top" secondItem="Ye0-2I-7VE" secondAttribute="top" id="k0R-ba-k7Y"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="滴滴出行" id="7Wr-Qn-KGX">
@@ -1357,6 +1361,10 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="DiDiWebView" destination="hah-oS-CZm" id="Hwe-gP-Opc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RH3-4B-xLU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
